--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,36 +94,18 @@ display: none;
     border:none;
 }
   
+.range-slider__range,.range-slider__thumb{
+  background-color: #00B207 !important;
+}
+
+.range-slider .range-slider__thumb {
+  width: 18px !important;
+  height: 18px !important;
+}
+
 .range-slider {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 100%;
-  height: 4px;
-  background: transparent;
-  position: absolute;
-  pointer-events: none;
+  height: 6px !important;
 }
-
-.range-slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  height: 18px;
-  width: 18px;
-  background-color: #4caf50;
-  z-index: 100;
-  border-radius: 50%;
-  cursor: pointer;
-  pointer-events: auto;
-}
-
-.range-slider::-moz-range-thumb {
-  height: 18px;
-  width: 18px;
-  background-color: #4caf50;
-  border-radius: 50%;
-  cursor: pointer;
-  pointer-events: auto;
-}  
   
   
   
